--- a/res/drawable/tab_box.xml
+++ b/res/drawable/tab_box.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<!-- Non focused states -->
-	<item android:state_focused="false" android:state_selected="false" android:drawable="@drawable/tab_unselected" />
 	<item android:state_focused="false" android:state_selected="true" android:drawable="@drawable/tab_selected" />
+	<item android:state_focused="false" android:state_selected="false" android:drawable="@android:color/transparent" />
 
 </selector>
