--- a/res/layout/tab.xml
+++ b/res/layout/tab.xml
@@ -22,6 +22,8 @@
 	
 	<TextView android:id="@+id/tab_title"
 		android:textColor="@drawable/tab_textcolor"
+		android:textStyle="bold"
+		android:textSize="16dip"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
@@ -30,7 +32,6 @@
 		android:layout_marginBottom="9dip"
 		android:layout_marginLeft="7dip"
 		android:paddingRight="10dip"
-		android:textStyle="bold"
 		android:shadowColor="#ffffff"
 		android:shadowDx="0"
 		android:shadowDy="1"
