--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,7 +14,7 @@
   limitations under the License.
   -->
 <resources>
-    <color name="actionbar_text">#ff29549f</color>
+    <color name="actionbar_text">#e2e2e2</color>
 
     <color name="body_text_1">#ff000000</color>
     <color name="body_text_2">#99000000</color>
