--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -86,7 +86,7 @@
         <item name="android:paddingRight">12dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/actionbar_text</item>
-        <item name="android:shadowColor">#fff</item>
+        <item name="android:shadowColor">#000</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.00001</item>
