Added: Refresh menu with trigger to update, still ANRs though.

--- a/res/layout/list_item_album.xml
+++ b/res/layout/list_item_album.xml
@@ -22,7 +22,8 @@
         android:layout_gravity="top|right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/indicator_starred" />
+        android:src="@drawable/indicator_starred"
+        android:visibility="gone" />
     <RelativeLayout android:id="@+id/list_item_album"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
