Added: Home screen with one action.

--- a/res/layout/activity_singlepane_empty.xml
+++ b/res/layout/activity_singlepane_empty.xml
@@ -17,7 +17,8 @@
     android:id="@+id/root_container"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+	android:background="@drawable/bg_gradient_light">
     <include layout="@layout/actionbar"/>
 
 </LinearLayout>
