--- a/res/layout/list_item_album.xml
+++ b/res/layout/list_item_album.xml
@@ -1,22 +1,27 @@
 <!--
-  Copyright 2011 Google Inc.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
+	    Copyright (C) 2005-2015 Team XBMC
+	    http://xbmc.org
+	
+	This Program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2, or (at your option)
+	any later version.
+	
+	This Program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+	GNU General Public License for more details.
+	
+	You should have received a copy of the GNU General Public License
+	along with XBMC Remote; see the file license.  If not, write to
+	the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+	http://www.gnu.org/copyleft/gpl.html
+-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/ListItemContainer">
+    
     <!-- TODO: swap out with better star drawable when disabled -->
     <ImageView android:id="@+id/star_button"
         android:layout_gravity="top|right"
@@ -24,16 +29,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/indicator_starred"
         android:visibility="gone" />
+        
     <RelativeLayout android:id="@+id/list_item_album"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="@style/ListItemContent">
+        
         <TextView android:id="@+id/album_title"
             android:layout_toLeftOf="@id/star_button"
             android:layout_alignParentLeft="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             style="@style/ListItemTitle" />
+            
         <TextView android:id="@+id/album_subtitle"
             android:layout_below="@id/album_title"
             android:layout_toLeftOf="@id/star_button"
