--- a/res/layout/list_item_threelabels.xml
+++ b/res/layout/list_item_threelabels.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
 	    Copyright (C) 2005-2015 Team XBMC
 	    http://xbmc.org
@@ -20,34 +21,45 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     style="@style/ListItemContainer">
     
     <!-- TODO: swap out with better star drawable when disabled -->
-    <ImageView android:id="@+id/star_button"
+    <ImageView android:id="@+id/item_indicator"
         android:layout_gravity="top|right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/indicator_starred"
         android:visibility="gone" />
         
-    <RelativeLayout android:id="@+id/list_item_album"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="@style/ListItemContent">
         
-        <TextView android:id="@+id/album_title"
-            android:layout_toLeftOf="@id/star_button"
+        <TextView android:id="@+id/item_title"
+        	style="@style/ListItemTitle"
+        	android:text="Primary Title"
+            android:layout_toLeftOf="@id/item_indicator"
             android:layout_alignParentLeft="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@style/ListItemTitle" />
+             />
             
-        <TextView android:id="@+id/album_subtitle"
-            android:layout_below="@id/album_title"
-            android:layout_toLeftOf="@id/star_button"
+        <TextView android:id="@+id/item_subtitle"
+        	style="@style/ListItemSubtitle"
+        	android:text="Secondary Title"
+            android:layout_below="@id/item_title"
+            android:layout_toLeftOf="@id/item_indicator"
             android:layout_alignParentLeft="true"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/ListItemSubtitle" />
+             />
+        <TextView android:id="@+id/item_subsubtitle" 
+        style="@style/ListItemSubtitle" 
+        android:layout_height="wrap_content" 
+        android:layout_width="wrap_content" 
+        android:layout_below="@id/item_title" 
+        android:layout_alignParentRight="true" />
     </RelativeLayout>
 </FrameLayout>
