--- a/res/layout/actionbar.xml
+++ b/res/layout/actionbar.xml
@@ -19,4 +19,5 @@
 -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout style="@style/ActionBarCompat" />
+    <include layout="@layout/colorstrip" />
 </merge>
