--- a/res/layout-large-land-v11/activity_home.xml
+++ b/res/layout-large-land-v11/activity_home.xml
@@ -1,30 +1,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/home_root"
-    android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <LinearLayout android:orientation="vertical"
+    <include layout="@layout/actionbar" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-        <fragment android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
+        <fragment
             android:id="@+id/fragment_dashboard"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
+            android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
             android:layout_width="fill_parent"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
-    <LinearLayout android:orientation="vertical"
-        android:layout_weight="1"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="fill_parent"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@android:color/darker_gray">
-
+        android:layout_weight="1"
+        android:background="@android:color/darker_gray"
+        android:orientation="vertical" >
     </LinearLayout>
 
 </LinearLayout>
