--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,13 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/home_root"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
     <include layout="@layout/actionbar" />
 
-    <fragment android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
+    <fragment
         android:id="@+id/fragment_dashboard"
+        android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1" />
+
 </LinearLayout>
