--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,6 +15,7 @@
   -->
 <resources>
     <color name="actionbar_text">#e2e2e2</color>
+    <color name="actionbar_shadow">#000</color>
 
     <color name="body_text_1">#ff000000</color>
     <color name="body_text_2">#99000000</color>
@@ -23,8 +24,8 @@
     <color name="body_text_1_inverse">#ffffffff</color>
     <color name="body_text_2_inverse">#99ffffff</color>
 
-    <color name="accent_1">#ff29549f</color>
-    <color name="hyperlink">#ffff549f</color>
+    <color name="accent_1">#ffff0000</color>
+    <color name="hyperlink">#ff00ff00</color>
     <color name="background_1">#ffffffff</color>
 
     <color name="whats_on_separator">#4d000000</color>
