--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -37,7 +37,7 @@
 
     <!-- Start with the Holographic Light theme -->
     <style name="Theme.XBMCRemote.Home" parent="style/Theme.XBMCRemote">
-        <!-- item name="android:windowBackground">@drawable/background_noise</item -->
+        <item name="android:windowBackground">@drawable/bg_gradient_light</item>
     </style>
 
     <style name="ActionBarCompat">
@@ -88,7 +88,7 @@
         <item name="android:paddingRight">12dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/actionbar_text</item>
-        <item name="android:shadowColor">#000</item>
+        <item name="android:shadowColor">@color/actionbar_shadow</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.00001</item>
