--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -95,6 +95,38 @@
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
     </style>
+    
+    <style name="Dashbox">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginLeft">@dimen/tablet_padding_home</item>
+        <item name="android:background">@color/semitrans_dark</item>
+    </style>
+    
+    <style name="DashboxTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dashbox_title</item>
+        <item name="android:background">@color/semitrans_dark</item>
+    </style>
+
+    <style name="DashboxTitleText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/dashbox_padding</item>
+        <item name="android:textSize">@dimen/dashbox_title_text</item>
+        <item name="android:textColor">@color/actionbar_text</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    
+    <style name="DashboxImage">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginRight">@dimen/dashbox_padding</item>
+		<item name="android:layout_marginLeft">@dimen/dashbox_padding</item>
+		<item name="android:layout_centerVertical">true</item>
+    </style>
 
     <style name="ListItemTitle">
         <item name="android:textStyle">bold</item>
