--- a/res/drawable/bg_gradient_light.xml
+++ b/res/drawable/bg_gradient_light.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
 	<gradient 
-		android:startColor="#FFeeeeee" 
-		android:endColor="#FFbbbbbb"
+		android:startColor="@color/light1" 
+		android:endColor="@color/light2"
 		android:angle="-90" />
 </shape>
