--- a/res/layout-large-land-v11/activity_home.xml
+++ b/res/layout-large-land-v11/activity_home.xml
@@ -7,28 +7,16 @@
     <include layout="@layout/actionbar" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        android:background="@drawable/bg_gradient_light">
 
         <fragment
             android:id="@+id/fragment_dashboard"
-            android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
+            android:name="org.xbmc.android.remotesandbox.ui.tablet.DashboardFragment"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:background="@android:color/darker_gray"
-        android:orientation="vertical" >
+            android:layout_height="fill_parent" />
     </LinearLayout>
 
 </LinearLayout>
