--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -8,9 +8,10 @@
 
     <fragment
         android:id="@+id/fragment_dashboard"
-        android:name="org.xbmc.android.remotesandbox.ui.DashboardFragment"
+        android:name="org.xbmc.android.remotesandbox.ui.phone.DashboardFragment"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1" >
+    </fragment>
 
 </LinearLayout>
