--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,61 +1,46 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!--
-/**
- * Copyright (c) 2010, The Android Open Source Project
+/*
+ *      Copyright (C) 2005-2015 Team XBMC
+ *      http://xbmc.org
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *  This Program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2, or (at your option)
+ *  any later version.
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *  This Program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ *  GNU General Public License for more details.
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *  You should have received a copy of the GNU General Public License
+ *  along with XBMC Remote; see the file license.  If not, write to
+ *  the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+ *  http://www.gnu.org/copyleft/gpl.html
+ *
  */
+
 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
+	
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="1">
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="5dip"
-            android:paddingBottom="13dip"
-            android:paddingLeft="20dip"
-            android:paddingRight="20dip">
+        <LinearLayout android:id="@+id/credentials" style="@style/AccountSetupContainer">
             <TextView
                 android:id="@+id/message"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dip" />
-            <TextView
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login_username_label" />
-            <EditText
-                android:id="@+id/username_edit"
-                android:singleLine="true"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:minWidth="250dip"
-                android:scrollHorizontally="true"
-                android:capitalize="none"
-                android:autoText="false"
-                android:inputType="textEmailAddress" />
+            <TextView style="@style/AccountSetupLabel" android:text="@string/login_username_label" />
+            <EditText style="@style/AccountSetupEditText" android:id="@+id/username_edit" android:inputType="textEmailAddress" />
             <TextView
                 android:id="@+id/username_fixed"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -63,25 +48,8 @@
                 android:layout_marginTop="2dip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:singleLine="true"
-                android:layout_marginTop="2dip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login_password_label" />
-            <EditText
-                android:id="@+id/password_edit"
-                android:singleLine="true"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:minWidth="250dip"
-                android:scrollHorizontally="true"
-                android:capitalize="none"
-                android:autoText="false"
-                android:password="true"
-                android:inputType="textPassword" />
+            <TextView style="@style/AccountSetupLabel" android:text="@string/login_password_label" />
+            <EditText style="@style/AccountSetupEditText" android:id="@+id/password_edit" android:password="true" android:inputType="textPassword" />
             <TextView
                 android:id="@+id/message_bottom"
                 android:textAppearance="?android:attr/textAppearanceSmall"
