--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -135,6 +135,7 @@
     </style>
 
     <style name="ListItemTitle">
+        <item name="android:layout_marginLeft">5dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textColor">@color/body_text_1</item>
@@ -250,13 +251,6 @@
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_gravity">center_horizontal</item>
 		<item name="android:minWidth">100dp</item>
-    </style>
-    
-    <style name="AccountSetupList">
-    	<item name="android:fadingEdge">none</item>
-    	<item name="android:scrollbars">none</item>
-    	<item name="android:divider">#a0a0a0</item>
-    	<item name="android:dividerHeight">1dip</item>
     </style>
 
 </resources>
